UWM-CMS: Fixes for IE on smaller screens

--- a/docroot/themes/custom/uwmed/src/components/medical-services/_medical-service.scss
+++ b/docroot/themes/custom/uwmed/src/components/medical-services/_medical-service.scss
@@ -38,6 +38,10 @@
     box-shadow: inset 0 0 0 2000px rgba(71, 71, 71, 0.5);
   }
 
+  .container {
+    width: 100%;
+  }
+
   .medical-service-hero__content {
     margin-top: auto;
     margin-bottom: auto;
@@ -233,6 +237,10 @@
         flex-direction: column;
         justify-content: center;
         background: $uwmed-tab-purple;
+
+        @media(max-width: $screen-xs-max) {
+          flex: 1;
+        }
       }
       > li > a {
         background: $uwmed-tab-purple;
